--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Jagadesh-Ronanki/azure-server#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mssql": "^10.0.2"
   }
